// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Screen test Main screen matches snapshot 1`] = `
<View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 75,
        "paddingHorizontal": 28,
      }
    }
  >
    <MenuIcon
      onPress={[Function]}
      style={Object {}}
    />
    <UserIcon
      onPress={[Function]}
      style={Object {}}
    />
    <AddIcon
      onPress={[Function]}
      style={Object {}}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "width": "100%",
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontFamily": "RNSMiles-Black",
              "fontSize": 30,
            },
            Object {
              "color": "#E4F96A",
              "marginVertical": 48,
            },
          ]
        }
      >
        NO ALARMS SET
      </Text>
    </View>
    <View
      style={
        Object {
          "marginVertical": 48,
        }
      }
    >
      <StatusBar
        barStyle="light-content"
      />
      <AnalogClock
        backgroundImage="./img/clockBack.png"
        clockBorderWidth={7}
        clockSize={270}
        hourHandColor="#E4F96A"
        hourHandCurved={false}
        hourHandLength={70}
        hourHandOffset={0}
        hourHandWidth={6}
        minuteHandColor="#DDDDDD"
        minuteHandCurved={false}
        minuteHandLength={105}
        minuteHandOffset={0}
        minuteHandWidth={2}
        secondHandColor="black"
        secondHandCurved={false}
        secondHandLength={120}
        secondHandOffset={0}
        secondHandWidth={2}
      />
    </View>
    <View>
      <Buttons
        backgroundColor="#505050"
        onPress={[Function]}
        textColor="#DDDDDD"
        title="Dev Page"
      />
    </View>
  </View>
</View>
`;

exports[`Main Screen test Main screen matches snapshot when alarm defined 1`] = `
<View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 75,
        "paddingHorizontal": 28,
      }
    }
  >
    <MenuIcon
      onPress={[Function]}
      style={Object {}}
    />
    <UserIcon
      onPress={[Function]}
      style={Object {}}
    />
    <AddIcon
      onPress={[Function]}
      style={Object {}}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "width": "100%",
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontFamily": "RNSMiles-Black",
              "fontSize": 30,
            },
            Object {
              "color": "#E4F96A",
              "marginTop": 40,
            },
          ]
        }
      >
        PREDICTED:
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontFamily": "RNSMiles-Black",
              "fontSize": 70,
            },
            Object {
              "alignItems": "center",
              "color": "#DDDDDD",
              "fontSize": 70,
            },
          ]
        }
      >
        <Text>
          10
          :
          00
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#DDDDDD",
                "fontFamily": "RNSMiles-Bold",
                "fontSize": 36,
              },
            ]
          }
        >
           
          AM
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontSize": 14,
              "fontWeight": "500",
            },
            Object {
              "color": "#DDDDDD",
              "marginLeft": 8,
            },
          ]
        }
      >
        Sunday, May. 26th
      </Text>
    </View>
    <View
      style={
        Object {
          "marginVertical": 48,
        }
      }
    >
      <StatusBar
        barStyle="light-content"
      />
      <AnalogClock
        backgroundImage="./img/clockBack.png"
        clockBorderWidth={7}
        clockSize={270}
        hourHandColor="#E4F96A"
        hourHandCurved={false}
        hourHandLength={70}
        hourHandOffset={0}
        hourHandWidth={6}
        minuteHandColor="#DDDDDD"
        minuteHandCurved={false}
        minuteHandLength={105}
        minuteHandOffset={0}
        minuteHandWidth={2}
        secondHandColor="black"
        secondHandCurved={false}
        secondHandLength={120}
        secondHandOffset={0}
        secondHandWidth={2}
      />
    </View>
    <View>
      <Buttons
        backgroundColor="#505050"
        onPress={[Function]}
        textColor="#DDDDDD"
        title="DISMISS"
      />
      <Buttons
        backgroundColor="#505050"
        onPress={[Function]}
        textColor="#DDDDDD"
        title="Dev Page"
      />
    </View>
  </View>
</View>
`;

exports[`Main Screen test Main screen matches snapshot when loading 1`] = `
<View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 75,
        "paddingHorizontal": 28,
      }
    }
  >
    <MenuIcon
      onPress={[Function]}
      style={Object {}}
    />
    <UserIcon
      onPress={[Function]}
      style={Object {}}
    />
    <AddIcon
      onPress={[Function]}
      style={Object {}}
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "width": "100%",
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontFamily": "RNSMiles-Black",
              "fontSize": 30,
            },
            Object {
              "color": "#E4F96A",
              "marginTop": 40,
            },
          ]
        }
      >
        CALCULATING...
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontFamily": "RNSMiles-Black",
              "fontSize": 70,
            },
            Object {
              "alignItems": "center",
              "color": "#DDDDDD",
              "fontSize": 70,
            },
          ]
        }
      >
        <Text>
          0
          :
          00
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#DDDDDD",
                "fontFamily": "RNSMiles-Bold",
                "fontSize": 36,
              },
            ]
          }
        >
           
          - -
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#DDDDDD",
              "fontSize": 14,
              "fontWeight": "500",
            },
            Object {
              "color": "#DDDDDD",
              "marginLeft": 8,
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "marginVertical": 48,
        }
      }
    >
      <StatusBar
        barStyle="light-content"
      />
      <AnalogClock
        backgroundImage="./img/clockBack.png"
        clockBorderWidth={7}
        clockSize={270}
        hourHandColor="#E4F96A"
        hourHandCurved={false}
        hourHandLength={70}
        hourHandOffset={0}
        hourHandWidth={6}
        minuteHandColor="#DDDDDD"
        minuteHandCurved={false}
        minuteHandLength={105}
        minuteHandOffset={0}
        minuteHandWidth={2}
        secondHandColor="black"
        secondHandCurved={false}
        secondHandLength={120}
        secondHandOffset={0}
        secondHandWidth={2}
      />
    </View>
    <View>
      <Buttons
        backgroundColor="#505050"
        onPress={[Function]}
        textColor="#DDDDDD"
        title="DISMISS"
      />
      <Buttons
        backgroundColor="#505050"
        onPress={[Function]}
        textColor="#DDDDDD"
        title="Dev Page"
      />
    </View>
  </View>
</View>
`;
